; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/tdfx/extr_tdfx_pci.c_tdfx_detach.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/tdfx/extr_tdfx_pci.c_tdfx_detach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tdfx_softc = type { i32, i32, i32, i32*, i32 }

@SYS_RES_MEMORY = common dso_local global i32 0, align 4
@PCI_DEVICE_3DFX_BANSHEE = common dso_local global i64 0, align 8
@PCI_DEVICE_3DFX_VOODOO3 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @tdfx_detach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tdfx_detach(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.tdfx_softc*, align 8
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call %struct.tdfx_softc* @device_get_softc(i32 %5)
  store %struct.tdfx_softc* %6, %struct.tdfx_softc** %3, align 8
  %7 = load i32, i32* %2, align 4
  %8 = load i32, i32* @SYS_RES_MEMORY, align 4
  %9 = load %struct.tdfx_softc*, %struct.tdfx_softc** %3, align 8
  %10 = getelementptr inbounds %struct.tdfx_softc, %struct.tdfx_softc* %9, i32 0, i32 4
  %11 = load i32, i32* %10, align 8
  %12 = load %struct.tdfx_softc*, %struct.tdfx_softc** %3, align 8
  %13 = getelementptr inbounds %struct.tdfx_softc, %struct.tdfx_softc* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @bus_release_resource(i32 %7, i32 %8, i32 %11, i32 %14)
  %16 = load i32, i32* %2, align 4
  %17 = call i64 @pci_get_devid(i32 %16)
  %18 = load i64, i64* @PCI_DEVICE_3DFX_BANSHEE, align 8
  %19 = icmp eq i64 %17, %18
  br i1 %19, label %25, label %20

20:                                               ; preds = %1
  %21 = load i32, i32* %2, align 4
  %22 = call i64 @pci_get_devid(i32 %21)
  %23 = load i64, i64* @PCI_DEVICE_3DFX_VOODOO3, align 8
  %24 = icmp eq i64 %22, %23
  br i1 %24, label %25, label %41

25:                                               ; preds = %20, %1
  %26 = load %struct.tdfx_softc*, %struct.tdfx_softc** %3, align 8
  %27 = getelementptr inbounds %struct.tdfx_softc, %struct.tdfx_softc* %26, i32 0, i32 3
  %28 = load i32*, i32** %27, align 8
  %29 = icmp ne i32* %28, null
  br i1 %29, label %30, label %40

30:                                               ; preds = %25
  %31 = load i32, i32* %2, align 4
  %32 = load i32, i32* @SYS_RES_MEMORY, align 4
  %33 = load %struct.tdfx_softc*, %struct.tdfx_softc** %3, align 8
  %34 = getelementptr inbounds %struct.tdfx_softc, %struct.tdfx_softc* %33, i32 0, i32 2
  %35 = load i32, i32* %34, align 8
  %36 = load %struct.tdfx_softc*, %struct.tdfx_softc** %3, align 8
  %37 = getelementptr inbounds %struct.tdfx_softc, %struct.tdfx_softc* %36, i32 0, i32 1
  %38 = load i32, i32* %37, align 4
  %39 = call i32 @bus_release_resource(i32 %31, i32 %32, i32 %35, i32 %38)
  br label %40

40:                                               ; preds = %30, %25
  br label %41

41:                                               ; preds = %40, %20
  %42 = load i32, i32* %2, align 4
  %43 = call i32 @tdfx_clrmtrr(i32 %42)
  store i32 %43, i32* %4, align 4
  %44 = load %struct.tdfx_softc*, %struct.tdfx_softc** %3, align 8
  %45 = getelementptr inbounds %struct.tdfx_softc, %struct.tdfx_softc* %44, i32 0, i32 0
  %46 = load i32, i32* %45, align 8
  %47 = call i32 @destroy_dev(i32 %46)
  ret i32 0
}

declare dso_local %struct.tdfx_softc* @device_get_softc(i32) #1

declare dso_local i32 @bus_release_resource(i32, i32, i32, i32) #1

declare dso_local i64 @pci_get_devid(i32) #1

declare dso_local i32 @tdfx_clrmtrr(i32) #1

declare dso_local i32 @destroy_dev(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
